<resources>
    <string name="app_name">Fit Dictionary</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fit_dictionary">Fit Dictionary</string>
    <string name="make_your_study_meaningful">Make your study meaningful</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="email_address">Please enter your email. We will send you a code to change your password.</string>
    <string name="password">Password</string>
    <string name="forgot_pass"><u>Forgot Password?</u></string>
    <string name="this_field_is_required">This field is required</string>
    <string name="signup">Sign up</string>
    <string name="sign_me_up_for_email_updates">Sign me up for email updates from FIT Dictionary</string>
    <string name="I_agree_to_the_terms_of_use">I agree to the Terms of Use and Privacy Notice</string>
    <string name="confirm_email">Reset your password</string>
    <string name="confirmation_code">Verification code</string>
    <string name="ok">OK</string>
    <string name="reset_pass">Send</string>
    <string name="fit">FIT</string>
    <string name="dictionary">Dictionary</string>
    <string name="confirm_code">Confirm code</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="back_fake"><![CDATA[<]]></string>
    <string name="full_name">Full Name</string>
    <string name="cancel">Cancel</string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>