<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verification_code_screen.VerificationCodeFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/confirm_email_constraint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
<!--        android:background="@color/nice">-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/back_constraint_confirm_pass"
            android:background="@drawable/background_back_constraint"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:alpha="0">

            <TextView
                android:id="@+id/confirm_code_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back_fake"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/confirm_email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_code"
            android:textColor="#6A6767"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/background_gradient"
            app:layout_constraintTop_toBottomOf="@+id/confirm_email_tv"
            tools:layout_editor_absoluteX="70dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/verification_code_was_sent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_email_constraint"
        android:layout_marginTop="20dp"
        android:textSize="18sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/background"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/verification_code_was_sent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:id="@+id/confirm_code_enter"
            android:hint="@string/confirmation_code"
            android:inputType="number"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/confirm_code_enter"
            app:layout_constraintTop_toBottomOf="@id/confirm_code_enter"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textStyle="italic"
            android:id="@+id/alert_confirm_code"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:id="@+id/count_constraint_confirm_code"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confirm_code_enter"
                android:layout_marginTop="50dp">

                <TextView
                    android:id="@+id/count_tv_confirm_code"
                    android:layout_width="6dp"
                    android:layout_height="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        app:layout_constraintTop_toBottomOf="@+id/count_constraint_confirm_code">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/new_password_space"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/new_password_et"
            android:inputType="textPassword"
            android:hint="@string/new_password"
            android:background="@drawable/background"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/see_new_password"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/see_new_password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/new_password_space"
        app:layout_constraintTop_toBottomOf="@id/new_password_space"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="italic"
        android:id="@+id/alert_new_password"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/confirm_password_space"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@+id/new_password_space"
        app:layout_constraintEnd_toEndOf="@+id/new_password_space"
        app:layout_constraintTop_toBottomOf="@+id/new_password_space">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/confirm_password_et"
            android:inputType="textPassword"
            android:hint="@string/confirm_new_password"
            android:background="@drawable/background"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/see_confirm_new_pass"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/see_confirm_new_pass"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/confirm_password_space"
        app:layout_constraintTop_toBottomOf="@id/confirm_password_space"
        android:layout_marginTop="10dp"
        android:id="@+id/alert_confirm_password"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ok_bar_confirm_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/background_gradient"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alert_confirm_password">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/next_btn_confirm_email"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_navigate_next_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:alpha="0"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/cancel_confirm_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Cancel"
        android:textColor="#433E3E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ok_bar_confirm_email" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>